--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "cometchat-integrations",
   "version": "2.0.1",
   "description": "A Node.js project for CometChat integrations",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
