--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node": ">=14.0.0"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0"
   },
   "devDependencies": {
