fix: Resolve npm dependency issues in production deployment
- Add npm cache clean and retry logic in migration script
- Update GitHub Actions to clean cache before npm install
- Use --no-optional flag to avoid optional dependency issues
- Handle nodemon dev dependency conflicts in production

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,8 @@ jobs:
           echo "📥 Pulling latest code from GitHub..."
           git pull origin main
           echo "📦 Installing dependencies..."
-          npm install --production
+          npm cache clean --force
+          npm install --production --no-optional
           echo "🔄 Restarting application..."
           pm2 restart cometchat-integrations
           echo "✅ Deployment complete!"
