--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,14 @@ TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 TELEGRAM_WEBHOOK_SECRET=your_telegram_webhook_secret_here
 
 # =============================================================================
+# DISCORD CONFIGURATION
+# =============================================================================
+DISCORD_BOT_TOKEN=your_discord_bot_token_here
+DISCORD_APPLICATION_ID=your_discord_application_id_here
+DISCORD_PUBLIC_KEY=your_discord_public_key_here
+DISCORD_WEBHOOK_SECRET=your_discord_webhook_secret_here
+
+# =============================================================================
 # LOGGING CONFIGURATION
 # =============================================================================
 LOG_LEVEL=info
