--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "node": ">=14.0.0"
   },
   "dependencies": {
+    "@discordjs/rest": "^2.6.0",
+    "axios": "^1.12.2",
+    "discord.js": "^14.22.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0"
   },
