--- a/nginx-ssl.conf
+++ b/nginx-ssl.conf
@@ -1,54 +1,17 @@
-# Updated nginx configuration with SSL support
-# Replace your /etc/nginx/nginx.conf with this configuration
+  GNU nano 8.3                                                                                                  /etc/nginx/nginx.conf                                                                                                            
 
-user nginx;
-worker_processes auto;
-error_log /var/log/nginx/error.log notice;
-pid /run/nginx.pid;
-
-include /usr/share/nginx/modules/*.conf;
-
-events {
-    worker_connections 1024;
-}
-
-http {
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                    '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
-
-    access_log /var/log/nginx/access.log main;
-
-    sendfile            on;
-    tcp_nopush          on;
-    keepalive_timeout   65;
-    types_hash_max_size 4096;
-
-    include             /etc/nginx/mime.types;
-    default_type        application/octet-stream;
-
-    # Redirect HTTP to HTTPS
-    server {
-        listen 80;
-        server_name adityagokula.com www.adityagokula.com;
-        return 301 https://$server_name$request_uri;
-    }
-
-    # HTTPS Server Configuration
-    server {
-        listen 443 ssl http2;
-        server_name adityagokula.com www.adityagokula.com;
-
-        # SSL Configuration
-        ssl_certificate /etc/letsencrypt/live/adityagokula.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/adityagokula.com/privkey.pem;
-        
-        # SSL Security Settings
+        # Enhanced SSL Settings for Webhook Compatibility
         ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384;
-        ssl_prefer_server_ciphers off;
+
+        # More compatible cipher suites for older webhook clients
+        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-S>
+
+        ssl_prefer_server_ciphers on;
         ssl_session_cache shared:SSL:10m;
         ssl_session_timeout 10m;
+
+        # Add SSL session tickets for better compatibility
+        ssl_session_tickets on;
 
         # Security Headers
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
@@ -76,13 +39,18 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
-            
+
             # Additional headers for HTTPS
             proxy_set_header X-Forwarded-SSL on;
             proxy_redirect off;
+
+            # Increase timeouts for webhook processing
+            proxy_connect_timeout	60s;
+            proxy_send_timeout          60s;
+            proxy_read_timeout          60s;
         }
 
-        # Error pages
+	# Error pages
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
             root   /usr/share/nginx/html;
