feat: Add Tripetto FormBuilder SDK integration for healthcare workflows
- Install @tripetto/runner and @tripetto/runner-fabric packages
- Implement ChroniusCare virtual assistant workflow with Ava
- Add comprehensive Tripetto service with conversation state management
- Integrate CometChat webhook processing for /care command triggers
- Support active conversation detection and follow-up responses
- Add healthcare form configuration with 5 service options:
  * Schedule Appointment
  * Ask Medical Question
  * Prescription Refill
  * View Test Results
  * Contact Support
- Include test scripts for debugging and validation
- Enable seamless healthcare workflow through CometChat interface

Components added:
- src/config/tripettoForms.js: Form definitions and lookup helpers
- src/services/tripettoService.js: Core workflow processing logic
- src/services/conversationStateService.js: Session and state management
- Enhanced src/controllers/cometChatController.js: Webhook integration
- Test utilities for debugging and validation

Usage: Send '/care' in CometChat to start the healthcare workflow

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "@discordjs/rest": "^2.6.0",
+    "@tripetto/runner": "^8.2.0",
+    "@tripetto/runner-fabric": "^8.0.16",
     "axios": "^1.12.2",
     "discord.js": "^14.22.1",
     "dotenv": "^17.2.3",
